# sqlx-actix-test

./: .env  .gitignore  Cargo.toml  Makefile  README.md  notes.sh
migrations/: 20210314_junk.sql  20210315000000_create.sql
src/: error.rs  junk.rs  main.rs  paglia.rs  stream.rs
tests/: junkstream.lua  local.yml  warmup.yml
